--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -7,5 +7,8 @@
     "serverless-cloudfront-invalidate": "^1.3.0",
     "serverless-python-requirements": "^5.4.0",
     "serverless-s3-sync": "^1.17.3"
+  },
+  "devDependencies": {
+    "serverless-localstack": "^1.2.0"
   }
 }
