--- a/solution/static-assets/package.json
+++ b/solution/static-assets/package.json
@@ -4,11 +4,15 @@
   "description": "Serverless config for eRegs core",
   "private": true,
   "dependencies": {
+    "patch-package": "^8.0.0",
     "serverless-cloudfront-invalidate": "^1.3.0",
     "serverless-python-requirements": "^5.4.0",
     "serverless-s3-sync": "^1.17.3"
   },
   "devDependencies": {
     "serverless-localstack": "^1.2.0"
+  },
+  "scripts": {
+    "postinstall": "patch-package"
   }
 }
