--- a/.github/workflows/ruff-action.yml
+++ b/.github/workflows/ruff-action.yml
@@ -1,10 +1,24 @@
 name: Ruff
 on: [ push, pull_request, workflow_dispatch ]
+
 jobs:
   ruff:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: chartboost/ruff-action@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
         with:
-          src: "./solution"
+          python-version: 3.9
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ruff  
+
+      - name: Run Ruff
+        run: |
+          ruff check --preview  
