--- a/solution/backend/pyproject.toml
+++ b/solution/backend/pyproject.toml
@@ -1,4 +1,5 @@
 [tool.pytest.ini_options]
+
 DJANGO_SETTINGS_MODULE = "cmcs_regulations.settings.test_settings"
 
 [tool.coverage.run]
@@ -9,20 +10,6 @@ omit = [
 
 
 [tool.ruff]
-# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
-select = ["E", "F", "G", "I", "S", "W", "ASYNC",
-          "E111", "E112", "E113", "E114", "E115", "E116", "E117", "E201", "E202", "E203", "E211", "E222", "E222", "E223",
-          "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E252", "E261", "E262", "E265", "E266",
-          "E271", "E272", "E273", "E274", "E275",
-        ]
-ignore = ['S101']
-
-# Allow autofix for all enabled rules (when `--fix`) is provided.
-fixable = ["E", "F", "I", "W",
-           "E201", "E202", "E203", "E211", "E231",
-          ]
-unfixable = []
-
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -48,6 +35,22 @@ exclude = [
     "venv",
     "migrations",
 ]
+line-length = 130
+# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
+select = ["E", "F", "G", "I", "S", "W", "ASYNC",
+          "E111", "E112", "E113", "E114", "E115", "E116", "E117", "E201", "E202", "E203", "E211", "E222", "E222", "E223",
+          "E224", "E225", "E226", "E227", "E228", "E231", "E241", "E242", "E251", "E252", "E261", "E262", "E265", "E266",
+          "E271", "E272", "E273", "E274", "E275",
+        ]
+ignore = ['S101']
+
+# Allow autofix for all enabled rules (when `--fix`) is provided.
+[lint]
+fixable = ["E", "F", "I", "W",
+           "E201", "E202", "E203", "E211", "E231",
+          ]
+unfixable = []
+
 
 # Same as Black.
 line-length = 130
