--- a/solution/backend/package.json
+++ b/solution/backend/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "serverless-associate-waf": "^1.2.1",
     "serverless-go-plugin": "^2.0.1",
+    "serverless-localstack": "^1.2.0",
     "serverless-python-requirements": "^5.1.1",
     "serverless-wsgi": "^1.7.8"
   },
