Fix database port

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -1,8 +1,8 @@
 name: "Deploy Experimental"
 
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+#on:
+#  pull_request:
+#    types: [opened, synchronize, reopened]
 
 
 permissions:
