--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -251,7 +251,7 @@ resources:
           log_disconnections: 1
           log_lock_waits: 1
           log_min_duration_statement: 5000
-          log_file_mod: 0600
+          log_file_mode: 0600
           auto_explain.log_min_duration: 5000
           auto_explain.log_verbose: 1
           log_rotation_age: 1440
