update serverless_functions to include a redirect lambda function

--- a/solution/backend/serverless_functions/dev_functions.yml
+++ b/solution/backend/serverless_functions/dev_functions.yml
@@ -33,3 +33,11 @@ index_resources:
   layers:
     - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
   timeout: 300
+redirectFunction:
+  handler: redirect_lambda.handler
+  events:
+    - http:
+        path: /redirect
+        method: any
+        integration: lambda
+        cors: true
