--- a/solution/backend/serverless_functions/experimental_functions.yml
+++ b/solution/backend/serverless_functions/experimental_functions.yml
@@ -54,10 +54,6 @@ empty_bucket:
   timeout: 300
 redirectFunction:
   handler: redirect_lambda.handler
-  events:
-    - http:
-        path: /redirect
-        method: any
-        integration: lambda
-        cors: true
   timeout: 300
+  layers:
+    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
